--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,5 @@ GPUCache
 /nativemobile/builds/
 /sitdepreciationtable.mpr.bak
 /sitdepreciationtable.mpr.lock
+/timesheet approval app template.mpr.bak
+/timesheet approval app template.mpr.lock
